--- a/index.html
+++ b/index.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Felicitas Rallé">
-    <meta name="description" content="ejercicio 1 del TP-05">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Felicitas Rallé" />
+    <meta name="description" content="ejercicio 1 del TP-05" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Ejercicio 1</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar bg-body-danger navPersonalizado">
+        <div class="container-fluid justify-content-center">
+          <span class="navbar-brand mb-0 h1">Dados Mágicos</span>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="container">
+        <h1 class="text-center my-4">Juego para Adivinar el Número</h1>
+        <h3 class="text-center subtitulo">
+          Haga clic en el botón para iniciar el juego
+        </h3>
+        <div class="row justify-content-center mt-3">
+          <div class="col-auto">
+            <button id="startGame" class="btn botonComenzar">COMENZAR</button>
+          </div>
+        </div>
+        <div class="row justify-content-center mt-3 d-none" id="gameArea">
+          <div class="col-auto">
+            <input
+              type="number"
+              id="guessInput"
+              class="form-control"
+              placeholder="Ingresar un número"
+            />
+            <button id="submitGuess" class="btn btn-success mt-2">
+              Enviar
+            </button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="text-center py-3">
+      <p>&copy; Todos los derechos reservados</p>
+    </footer>
+  </body>
+  <script src="./app.js"></script>
 </html>
