se modifico la estetica del boton enviar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               class="form-control"
               placeholder="Ingresar un número"
             />
-            <button id="submitGuess" class="btn btn-success mt-2">
+            <button id="submitGuess" class="btn mt-2 botonEnviar">
               Enviar
             </button>
           </div>
