se corriguio errores de sintaxis que presentaba el script

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
         </h3>
         <div class="row justify-content-center mt-3">
           <div class="col-auto">
-            <button id="startGame" class="btn botonComenzar">COMENZAR</button>
+            <button id="botonComenzar" class="btn botonComenzar">COMENZAR</button>
           </div>
         </div>
-        <div class="row justify-content-center mt-3 d-none" id="gameArea">
+        <div class="row justify-content-center mt-3 d-none" id="areaJuego">
           <div class="col-auto">
             <input
               type="number"
-              id="guessInput"
+              id="input"
               class="form-control"
               placeholder="Ingresar un número"
             />
-            <button id="submitGuess" class="btn mt-2 botonEnviar">
+            <button id="botonEnviar" class="btn mt-2 botonEnviar">
               Enviar
             </button>
           </div>
